fix letter spacing in captions

--- a/styles/core.css
+++ b/styles/core.css
@@ -82,6 +82,7 @@ video {
 }
 
 .caption {
+  letter-spacing: 0.1em;
   font-size: var(--font-size-small);
 }
 
